@@ -38,7 +38,6 @@ import org.junit.After;
 import org.junit.Before;
 import org.junit.Test;
 
-import java.io.File;
 import java.io.IOException;
 import java.util.List;
 import java.util.UUID;
@@ -48,7 +47,6 @@ import static org.junit.Assert.*;
 public class TestFileStorageManager {
 	private TajoConf conf;
 	private static String TEST_PATH = "target/test-data/TestFileStorageManager";
-  StorageManager sm = null;
   private Path testDir;
   private FileSystem fs;
 
@@ -57,7 +55,6 @@ public class TestFileStorageManager {
 		conf = new TajoConf();
     testDir = CommonTestingUtil.getTestDir(TEST_PATH);
     fs = testDir.getFileSystem(conf);
-    sm = StorageManager.getFileStorageManager(conf, testDir);
 	}
 
 	@After
@@ -84,14 +81,17 @@ public class TestFileStorageManager {
 
     Path path = StorageUtil.concatPath(testDir, "testGetScannerAndAppender", "table.csv");
     fs.mkdirs(path.getParent());
-		Appender appender = ((FileStorageManager)StorageManager.getFileStorageManager(conf)).getAppender(meta, schema, path);
+    FileStorageManager fileStorageManager = (FileStorageManager)StorageManager.getFileStorageManager(conf);
+    assertEquals(fs.getUri(), fileStorageManager.getFileSystem().getUri());
+
+		Appender appender = fileStorageManager.getAppender(meta, schema, path);
     appender.init();
 		for(Tuple t : tuples) {
 		  appender.addTuple(t);
 		}
 		appender.close();
 
-		Scanner scanner = ((FileStorageManager)StorageManager.getFileStorageManager(conf)).getFileScanner(meta, schema, path);
+		Scanner scanner = fileStorageManager.getFileScanner(meta, schema, path);
     scanner.init();
 		int i=0;
 		while(scanner.next() != null) {
@@ -110,6 +110,9 @@ public class TestFileStorageManager {
 
     final MiniDFSCluster cluster = new MiniDFSCluster.Builder(conf)
         .numDataNodes(1).build();
+    cluster.waitClusterUp();
+    TajoConf tajoConf = new TajoConf(conf);
+    tajoConf.setVar(TajoConf.ConfVars.ROOT_DIR, cluster.getFileSystem().getUri() + "/tajo");
 
     int testCount = 10;
     Path tablePath = new Path("/testGetSplit");
@@ -125,7 +128,8 @@ public class TestFileStorageManager {
       }
 
       assertTrue(fs.exists(tablePath));
-      FileStorageManager sm = (FileStorageManager)StorageManager.getFileStorageManager(new TajoConf(conf), tablePath);
+      FileStorageManager sm = (FileStorageManager)StorageManager.getFileStorageManager(tajoConf, tablePath);
+      assertEquals(fs.getUri(), sm.getFileSystem().getUri());
 
       Schema schema = new Schema();
       schema.addColumn("id", Type.INT4);
@@ -148,10 +152,7 @@ public class TestFileStorageManager {
       assertEquals(-1, ((FileFragment)splits.get(0)).getDiskIds()[0]);
       fs.close();
     } finally {
-      cluster.shutdown();
-
-      File dir = new File(testDataPath);
-      dir.delete();
+      cluster.shutdown(true);
     }
   }
 
@@ -165,6 +166,10 @@ public class TestFileStorageManager {
 
     final MiniDFSCluster cluster = new MiniDFSCluster.Builder(conf)
         .numDataNodes(2).build();
+    cluster.waitClusterUp();
+
+    TajoConf tajoConf = new TajoConf(conf);
+    tajoConf.setVar(TajoConf.ConfVars.ROOT_DIR, cluster.getFileSystem().getUri() + "/tajo");
 
     int testCount = 10;
     Path tablePath = new Path("/testGetSplitWithBlockStorageLocationsBatching");
@@ -177,7 +182,8 @@ public class TestFileStorageManager {
         DFSTestUtil.createFile(fs, tmpFile, 10, (short) 2, 0xDEADDEADl);
       }
       assertTrue(fs.exists(tablePath));
-      FileStorageManager sm = (FileStorageManager)StorageManager.getFileStorageManager(new TajoConf(conf), tablePath);
+      FileStorageManager sm = (FileStorageManager)StorageManager.getFileStorageManager(tajoConf, tablePath);
+      assertEquals(fs.getUri(), sm.getFileSystem().getUri());
 
       Schema schema = new Schema();
       schema.addColumn("id", Type.INT4);
@@ -194,10 +200,36 @@ public class TestFileStorageManager {
       assertNotEquals(-1, ((FileFragment)splits.get(0)).getDiskIds()[0]);
       fs.close();
     } finally {
-      cluster.shutdown();
+      cluster.shutdown(true);
+    }
+  }
 
-      File dir = new File(testDataPath);
-      dir.delete();
+  @Test
+  public void testStoreType() throws Exception {
+    final Configuration hdfsConf = new HdfsConfiguration();
+    String testDataPath = TEST_PATH + "/" + UUID.randomUUID().toString();
+    hdfsConf.set(MiniDFSCluster.HDFS_MINIDFS_BASEDIR, testDataPath);
+    hdfsConf.setLong(DFSConfigKeys.DFS_NAMENODE_MIN_BLOCK_SIZE_KEY, 0);
+    hdfsConf.setBoolean(DFSConfigKeys.DFS_HDFS_BLOCKS_METADATA_ENABLED, true);
+
+    final MiniDFSCluster cluster = new MiniDFSCluster.Builder(hdfsConf)
+        .numDataNodes(2).build();
+    cluster.waitClusterUp();
+
+    TajoConf tajoConf = new TajoConf(hdfsConf);
+    tajoConf.setVar(TajoConf.ConfVars.ROOT_DIR, cluster.getFileSystem().getUri() + "/tajo");
+
+    try {
+      /* Local FileSystem */
+      FileStorageManager sm = (FileStorageManager)StorageManager.getStorageManager(conf, StoreType.CSV);
+      assertEquals(fs.getUri(), sm.getFileSystem().getUri());
+
+      /* Distributed FileSystem */
+      sm = (FileStorageManager)StorageManager.getStorageManager(tajoConf, StoreType.CSV);
+      assertNotEquals(fs.getUri(), sm.getFileSystem().getUri());
+      assertEquals(cluster.getFileSystem().getUri(), sm.getFileSystem().getUri());
+    } finally {
+      cluster.shutdown(true);
     }
   }
 }
