@@ -174,6 +174,8 @@ Release 0.10.0 - unreleased
 
   BUG FIXES
 
+    TAJO-1322: Invalid stored caching on StorageManager. (jinho)
+
     TAJO-1319: Tajo can't find HBase configuration file. (jaehwa)
 
     TAJO-1312: Stage causes Invalid event error: SQ_SHUFFLE_REPORT 
